@@ -1,0 +1,26 @@
+From nget-ver Thu Jan  1 00:00:00 1970
+From: bob@bob
+Newsgroups: test
+Subject: text test
+Message-ID: <1@mbox.testdata>
+Date: Fri, 07 Jun 2002 22:18:11 GMT
+Lines: 2
+
+This is a test, it is
+>From me whee!
+
+From nget-ver Thu Jan  1 00:00:00 1970
+From: ralph@bob
+Newsgroups: test
+Subject: text test
+Message-ID: <2@mbox.testdata>
+References: <1@mbox.testdata>
+Date: Fri, 07 Jun 2002 22:19:11 GMT
+Lines: 5
+
+>This is a test, it is
+>>From me whee!
+No, it is
+>From me!
+haha!
+
